--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
     chrono = "0.4"
+    chrono-tz = "*"
     bitflags = "2.6"
     reqwest = { version = "0.12", features = ["json"] }
     tokio = { version = "1", features = ["full"] }
@@ -12,13 +13,22 @@ edition = "2021"
     serde_json = "1.0"
     polars = { version = "0.46", features = [
         "lazy",
-        "temporal",
         "describe",
         "json",
         "parquet",
         "strings",
         "dtype-datetime",
+        "dtype-date",
+        "dtype-time",
+        "dtype-duration",
         "timezones",
+        "temporal",
+        "rows",
+        "is_in",
+        "mode",
+        "offset_by",
+        "is_between",
+        "polars-ops",
     ] }
     time-unit = "0.1"
 
