--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,8 @@ description = "A great future awaits me!"
     ] }
     time-unit = "0.1"
 
+    futures = "0.3"
+    async-stream = "0.3"
+    futures-util = "0.2"
+
+
