--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,44 +2,46 @@
 name = "avin"
 version = "0.0.1"
 edition = "2021"
-license = "MIT"
 description = "A great future awaits me!"
+license = "MIT"
+authors = ["Alex Avin <mr.alexavin@gmail.com>"]
+repository = "https://github.com/arsvincere/avin"
 
 [dependencies]
-    # async-stream = "0.3"
-    bitcode = "=0.6.5"
-    # bitflags = "2.6"
-    chrono = "0.4"
-    # chrono-tz = "0.10"
-    # futures = "0.3"
-    # futures-util = "0.2"
-    reqwest = { version = "0.12", features = ["json"] }
-    # serde = "1.0"
-    serde_json = "1.0"
-    time-unit = "0.1"
-    # tinkoff-invest-api = { version = "0.2" }
-    tokio = { version = "1", features = ["full"] }
-    # tonic = "0.13"
-    polars = { version = "0.46", features = [
-        "lazy",
-        "describe",
-        "json",
-        "parquet",
-        "strings",
-        "dtype-datetime",
-        "dtype-date",
-        "dtype-time",
-        "dtype-duration",
-        "timezones",
-        "temporal",
-        "rows",
-        "is_in",
-        "mode",
-        "offset_by",
-        "is_between",
-        "polars-ops",
-    ] }
-
-
-
+chrono = "0.4"
+bitcode = "=0.6.5"
+reqwest = { version = "0.12", features = ["json"] }
+serde_json = "1.0"
+time-unit = "0.1"
+tokio = { version = "1", features = ["full"] }
+polars = { version = "0.46", features = [
+    "lazy",
+    "describe",
+    "json",
+    "parquet",
+    "strings",
+    "dtype-datetime",
+    "dtype-date",
+    "dtype-time",
+    "dtype-duration",
+    "timezones",
+    "temporal",
+    "rows",
+    "is_in",
+    "mode",
+    "offset_by",
+    "is_between",
+    "polars-ops",
+] }
+iced = { version = "0.13", features = ["debug"]}
+uuid = {version = "1.16.0", features = [ "v4", ]}
+tonic = { version = "0.11", features = ["tls", "tls-roots", "gzip"] }
+# tonic = { version = "0.13", features = ["transport", "channel", "tls-ring"] }
+tonic-build = { version = "0.8.0", features = [] }
+# tonic-build = "0.13"
+prost = "0.12"
+# prost = "0.13.5"
+prost-types = "0.12"
+# prost-types = "0.13.5"
+flume = "0.11.1"
 
