--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/arsvincere/avin"
 
 [dependencies]
 chrono = "0.4"
-bitcode = "=0.6.5"
+bitcode = "0.6.5"
 reqwest = { version = "0.12", features = ["json"] }
 serde_json = "1.0"
 time-unit = "0.1"
