--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,4 @@ prost-types = "0.12"
 flume = "0.11.1"
 log = "0.4.27"
 iced = { version = "0.13", features = ["debug"]}
+strum = { version = "0.27.1", features = ["derive", "strum_macros"]}
