--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,48 +1,58 @@
 [package]
 name = "avin"
 version = "0.1.0"
-edition = "2021"
-description = "A great future awaits me!"
+edition = "2024"
 license = "MIT"
+description = "Open source cross-platform trading system"
 authors = ["Alex Avin <mr.alexavin@gmail.com>"]
-repository = "https://github.com/arsvincere/avin"
+repository = "https://github.com/arsvincere/avin-rs"
 
 [dependencies]
-chrono = "0.4"
 bitcode = "0.6.5"
-reqwest = { version = "0.12", features = ["json"] }
-serde_json = "1.0"
-time-unit = "0.1"
-tokio = { version = "1", features = ["full"] }
+chrono = "0.4.41"
+eframe = { version = "0.31", default-features = false, features = [
+    "accesskit",     # Make egui compatible with screen readers.
+    "default_fonts", # Embed the default egui fonts.
+    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
+    "persistence",   # Enable restoring app state when restarting the app.
+    "wayland",       # To support Linux (and CI)
+    "x11",           # To support older Linux distributions
+] }
+egui-file-dialog = "0.10.0"
+egui_extras = "0.31.1"
+flume = "0.11.1"
+log = "0.4.27"
 polars = { version = "0.46", features = [
     "lazy",
+    "temporal",
     "describe",
     "json",
     "parquet",
-    "strings",
     "dtype-datetime",
-    "dtype-date",
-    "dtype-time",
-    "dtype-duration",
-    "timezones",
-    "temporal",
-    "rows",
-    "is_in",
-    "mode",
-    "offset_by",
+    "strings",
     "is_between",
-    "polars-ops",
 ] }
-uuid = {version = "1.16.0", features = [ "v4", ]}
-tonic = { version = "0.11", features = ["tls", "tls-roots", "gzip"] }
-# tonic = { version = "0.13", features = ["transport", "channel", "tls-ring"] }
-tonic-build = { version = "0.8.0", features = [] }
-# tonic-build = "0.13"
 prost = "0.12"
-# prost = "0.13.5"
 prost-types = "0.12"
-# prost-types = "0.13.5"
-flume = "0.11.1"
-log = "0.4.27"
-iced = { version = "0.13", features = ["debug"]}
+reqwest = { version = "0.12", features = ["json"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0"
 strum = { version = "0.27.1", features = ["derive", "strum_macros"]}
+time-unit = "0.1"
+tokio = { version = "1", features = ["full"] }
+tonic = { version = "0.11", features = ["tls", "tls-roots", "gzip"] }
+tonic-build = "0.8.0"
+uuid = {version = "1.16.0", features = [ "v4" ]}
+
+[[bin]]
+name = "data"
+path = "src/bin/a-data.rs"
+[[bin]]
+name = "terminal"
+path = "src/bin/a-terminal.rs"
+[[bin]]
+name = "tester"
+path = "src/bin/a-tester.rs"
+[[bin]]
+name = "trader"
+path = "src/bin/a-trader.rs"
