GUI AssetListWidget & ChartWidget

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ eframe = { version = "0.31", default-features = false, features = [
 ] }
 egui-file-dialog = "0.10.0"
 egui_extras = "0.31.1"
+egui_plot = "0.32.1"
 flume = "0.11.1"
 log = "0.4.27"
 polars = { version = "0.46", features = [
