--- a/avin_data_py/pyproject.toml
+++ b/avin_data_py/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "avin_data"
-version = "1.0.6"
+version = "1.0.7"
 description = "CLI utility for download market data"
 authors = [{name = "Alex Avin", email = "mr.alexavin@gmail.com"}]
 license = "MIT"
@@ -13,7 +13,7 @@ dependencies = [
     "moexalgo",
     "numpy",
     "pandas",
-    "polars",
+    # "polars",
     "polars-lts-cpu",
     "pyarrow",
     "pytest",
