--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,12 @@ description = "Open source cross-platform trading system"
 version = "0.2.5"
 edition = "2024"
 license = "MIT"
+readme = "README.md"
 authors = ["Alex Avin <mr.alexavin@gmail.com>"]
 repository = "https://github.com/arsvincere/avin"
 homepage = "https://avin.info"
+keywords = ["trading", "algo-trading", "moex", "tinkoff", "t-bank"]
+categories = ["trading"]
 
 [workspace.dependencies]
 bitcode = "0.6.5"
