--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ readme = "README.md"
 authors = ["Alex Avin <mr.alexavin@gmail.com>"]
 repository = "https://github.com/arsvincere/avin"
 homepage = "https://avin.info"
-keywords = ["trading", "algo-trading", "moex", "tinkoff", "t-bank"]
-categories = ["trading"]
+keywords = ["trading", "algo-trading", "algorithmic_trading", "moex", "tinkoff", "t-bank"]
+categories = ["Algorithmic Trading"]
 
 [workspace.dependencies]
 bitcode = "0.6.5"
