--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,28 +5,47 @@ members = [
     "avin_analyse",
     "avin_connect",
     "avin_core",
+    # "avin_gui",
     "avin_strategy",
     "avin_tester",
     "avin_trader",
-    "avin_utils"
+    "avin_utils",
 ]
 
 [workspace.package]
 description = "Open source cross-platform trading system"
-version = "0.2.6"
+version = "0.2.7"
 edition = "2024"
 license = "MIT"
 readme = "README.md"
 authors = ["Alex Avin <mr.alexavin@gmail.com>"]
 repository = "https://github.com/arsvincere/avin"
 homepage = "https://avin.info"
-keywords = ["trading", "algo-trading", "algorithmic_trading", "moex", "tinkoff", "t-bank"]
+keywords = [
+    "algo-trading",
+    "algorithmic trading",
+    "moex",
+    "t-bank",
+    "tinkoff",
+    "trading",
+]
 categories = ["Algorithmic Trading"]
 
 [workspace.dependencies]
 bitcode = "0.6.5"
 cached = "0.55.1"
 chrono = "0.4.41"
+eframe = { version = "0.31", default-features = false, features = [
+    "accesskit",     # Make egui compatible with screen readers.
+    "default_fonts", # Embed the default egui fonts.
+    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
+    "persistence",   # Enable restoring app state when restarting the app.
+    "wayland",       # To support Linux (and CI)
+    "x11",           # To support older Linux distributions
+] }
+egui-file-dialog = "0.10.0"
+egui_extras = { version= "0.31.1", features = ["all_loaders", "image", "svg"]}
+egui_plot = "0.32.1"
 flume = "0.11.1"
 log = "0.4.27"
 polars = { version = "0.49.1", features = [
@@ -38,10 +57,10 @@ polars = { version = "0.49.1", features = [
     "temporal",
     # "is_between",
     # "json",
-    # "polars-ops", # for Series.cum_sum()
+    # "polars-ops", # for Series.cum_sum(),
     # "strings",
 ] }
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 strum = { version = "0.27.1", features = ["derive", "strum_macros"]}
 time-unit = "0.1"
 tokio = { version = "1", features = ["full"] }
@@ -51,12 +70,15 @@ uuid = {version = "1.16.0", features = [ "v4" ]}
 prost-types = "0.12"
 prost = "0.12"
 
+
+
 # self crates
-avin = { version = "0.2.6", path = "avin" }
-avin_analyse = { version = "0.2.6", path = "avin_analyse" }
-avin_connect = { version = "0.2.6", path = "avin_connect" }
-avin_core = { version = "0.2.6", path = "avin_core" }
-avin_strategy = { version = "0.2.6", path = "avin_strategy" }
-avin_tester = { version = "0.2.6", path = "avin_tester" }
-avin_trader = { version = "0.2.6", path = "avin_trader" }
-avin_utils = { version = "0.2.6", path = "avin_utils" }
+avin = { version = "0.2.7", path = "avin" }
+avin_analyse = { version = "0.2.7", path = "avin_analyse" }
+avin_connect = { version = "0.2.7", path = "avin_connect" }
+avin_core = { version = "0.2.7", path = "avin_core" }
+# avin_gui = { version = "0.2.7", path = "avin_gui" }
+avin_strategy = { version = "0.2.7", path = "avin_strategy" }
+avin_tester = { version = "0.2.7", path = "avin_tester" }
+avin_trader = { version = "0.2.7", path = "avin_trader" }
+avin_utils = { version = "0.2.7", path = "avin_utils" }
