--- a/avin/Cargo.toml
+++ b/avin/Cargo.toml
@@ -13,11 +13,30 @@ readme = "../README.md"
 avin_analyse = { workspace = true }
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
+avin_gui = { workspace = true }
 avin_strategy = { workspace = true }
 avin_tester = { workspace = true }
 avin_trader = { workspace = true }
 avin_utils = { workspace = true }
-
+# tmp dependencies ###########################################################
 polars = { workspace = true }
 tokio = { workspace = true }
 chrono = { workspace = true }
+eframe = { workspace = true }
+##############################################################################
+
+[[bin]]
+name = "analyse"
+path = "src/bin/a-analyse.rs"
+[[bin]]
+name = "backtest"
+path = "src/bin/a-backtest.rs"
+[[bin]]
+name = "tester"
+path = "src/bin/a-tester.rs"
+[[bin]]
+name = "trader"
+path = "src/bin/a-trader.rs"
+[[bin]]
+name = "terminal"
+path = "src/bin/a-terminal.rs"
