--- a/avin_gui/Cargo.toml
+++ b/avin_gui/Cargo.toml
@@ -10,6 +10,7 @@ homepage = { workspace = true }
 readme = "../README.md"
 
 [dependencies]
+avin_analyse = { workspace = true }
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
 avin_tester = { workspace = true }
