--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ dev
 log/
 tmp/
 usr/
+
+# config
+res/default_config.toml
+
+# personal files / scripts
+avin_data/upload_script.py
+avin_data/venv
