--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "avin_core",
     "avin_gui",
     "avin_strategy",
+    "avin_terminal",
     "avin_tester",
     "avin_trader",
     "avin_utils",
@@ -66,6 +67,9 @@ uuid = {version = "1.16.0", features = [ "v4" ]}
 prost-types = "0.12"
 prost = "0.12"
 
+iced = {version="0.13.1", features = ["tokio", "lazy"]}
+iced_table = "0.13.0"
+
 # self crates
 avin = { version = "0.3.0", path = "avin" }
 avin_analyse = { version = "0.3.0", path = "avin_analyse" }
@@ -73,6 +77,7 @@ avin_connect = { version = "0.3.0", path = "avin_connect" }
 avin_core = { version = "0.3.0", path = "avin_core" }
 avin_gui = { version = "0.3.0", path = "avin_gui" }
 avin_strategy = { version = "0.3.0", path = "avin_strategy" }
+avin_terminal = { version = "0.3.0", path = "avin_terminal" }
 avin_tester = { version = "0.3.0", path = "avin_tester" }
 avin_trader = { version = "0.3.0", path = "avin_trader" }
 avin_utils = { version = "0.3.0", path = "avin_utils" }
