--- a/avin/Cargo.toml
+++ b/avin/Cargo.toml
@@ -18,7 +18,7 @@ avin_strategy = { workspace = true }
 avin_tester = { workspace = true }
 avin_trader = { workspace = true }
 avin_utils = { workspace = true }
-# tmp dependencies ###########################################################
+# tmp dependencies del it after release ######################################
 polars = { workspace = true }
 tokio = { workspace = true }
 chrono = { workspace = true }
@@ -32,11 +32,11 @@ eframe = { workspace = true }
 # name = "backtest"
 # path = "src/bin/a-backtest.rs"
 # [[bin]]
-# name = "tester"
+# name = "etester"
 # path = "src/bin/a-tester.rs"
 # [[bin]]
 # name = "trader"
 # path = "src/bin/a-trader.rs"
 # [[bin]]
-# name = "terminal"
+# name = "eterminal"
 # path = "src/bin/a-terminal.rs"
