--- a/avin_data_py/pyproject.toml
+++ b/avin_data_py/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.3.6"
 description = "CLI utility for download market data"
 authors = [{name = "Alex Avin", email = "mr.alexavin@gmail.com"}]
 license = "MIT"
-license-files = ["../LICENSE"]
+license-files = ["LICENSE"]
 requires-python = ">=3.13"
 dependencies = [
     "click>=8.1",
