--- a/avin_terminal/Cargo.toml
+++ b/avin_terminal/Cargo.toml
@@ -11,7 +11,10 @@ readme = "../README.md"
 
 [dependencies]
 avin_analyse = { workspace = true }
+avin_connect = { workspace = true }
 avin_core = { workspace = true }
 avin_utils = { workspace = true }
 iced = { workspace = true }
 iced_table = { workspace = true }
+log = { workspace = true }
+tokio = { workspace = true }
