--- a/avin_strategy/Cargo.toml
+++ b/avin_strategy/Cargo.toml
@@ -10,8 +10,11 @@ homepage = { workspace = true }
 readme = "../README.md"
 
 [dependencies]
+avin_analyse = { workspace = true }
 avin_core = { workspace = true }
 avin_utils = { workspace = true }
 chrono = { workspace = true }
 log = { workspace = true }
+serde = { workspace = true }
 tokio = { workspace = true }
+toml = { workspace = true }
