--- a/avin_analyse/Cargo.toml
+++ b/avin_analyse/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "avin_analyse"
+description = "Functions of data analyse for the 'avin' library"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-description = {workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
 homepage = { workspace = true }
