--- a/avin_connect/Cargo.toml
+++ b/avin_connect/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "avin_connect"
+description = "Broker connectors for the 'avin' library"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-description = {workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
 homepage = { workspace = true }
