--- a/avin/Cargo.toml
+++ b/avin/Cargo.toml
@@ -28,23 +28,24 @@ eframe = { workspace = true }
 [[bin]]
 name = "avin-analyse"
 path = "src/bin/a-analyse.rs"
-
 [[bin]]
 name = "avin-backscan"
 path = "src/bin/a-backscan.rs"
 [[bin]]
 name = "avin-backtest"
 path = "src/bin/a-backtest.rs"
-
+[[bin]]
+name = "avin-data"
+path = "src/bin/a-data.rs"
 [[bin]]
 name = "avin-scanner"
 path = "src/bin/a-scanner.rs"
+[[bin]]
+name = "avin-terminal"
+path = "src/bin/a-terminal.rs"
 [[bin]]
 name = "avin-tester"
 path = "src/bin/a-tester.rs"
 [[bin]]
 name = "avin-trader"
 path = "src/bin/a-trader.rs"
-[[bin]]
-name = "avin-terminal"
-path = "src/bin/a-terminal.rs"
