--- a/avin/Cargo.toml
+++ b/avin/Cargo.toml
@@ -14,11 +14,13 @@ avin_analyse = { workspace = true }
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
 avin_gui = { workspace = true }
+avin_scanner = { workspace = true }
 avin_simulator = { workspace = true }
 avin_strategy = { workspace = true }
 avin_tester = { workspace = true }
 avin_trader = { workspace = true }
 avin_utils = { workspace = true }
+
 # tmp dependencies del it after release ######################################
 polars = { workspace = true }
 tokio = { workspace = true }
@@ -26,27 +28,3 @@ chrono = { workspace = true }
 eframe = { workspace = true }
 ##############################################################################
 
-# [[bin]]
-# name = "avin-analyse"
-# path = "src/bin/a-analyse.rs"
-# [[bin]]
-# name = "avin-backscan"
-# path = "src/bin/a-backscan.rs"
-# [[bin]]
-# name = "avin-backtest"
-# path = "src/bin/a-backtest.rs"
-# [[bin]]
-# name = "avin-data"
-# path = "src/bin/a-data.rs"
-# [[bin]]
-# name = "avin-scanner"
-# path = "src/bin/a-scanner.rs"
-# [[bin]]
-# name = "avin-terminal"
-# path = "src/bin/a-terminal.rs"
-# [[bin]]
-# name = "avin-tester"
-# path = "src/bin/a-tester.rs"
-# [[bin]]
-# name = "avin-trader"
-# path = "src/bin/a-trader.rs"
