--- a/avin_scanner/Cargo.toml
+++ b/avin_scanner/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "avin_gui"
+name = "avin_scanner"
+description = { workspace = true }
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-description = {workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
 homepage = { workspace = true }
@@ -11,17 +11,8 @@ readme = "../README.md"
 
 [dependencies]
 avin_analyse = { workspace = true }
-avin_connect = { workspace = true }
 avin_core = { workspace = true }
-avin_scanner = { workspace = true }
-avin_strategy = { workspace = true }
-avin_tester = { workspace = true }
 avin_utils = { workspace = true }
 chrono = { workspace = true }
-eframe = { workspace = true }
-egui-file-dialog = { workspace = true }
-egui_extras = { workspace = true }
-egui_plot = { workspace = true }
-log = { workspace = true }
 serde = { workspace = true }
-tokio = { workspace = true }
+toml = { workspace = true }
