--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,8 @@ egui_extras = { version= "0.31.1", features = ["all_loaders", "image", "svg"]}
 egui_plot = "0.32.1"
 flume = "0.11.1"
 log = "0.4.27"
-polars = { version = "0.50.0", features = [
+# polars = { version = "0.46", features = [
+polars = { version = "0.50", features = [
     "cum_agg", # for Expr.cum_sum()
     "describe",
     "is_in",
