--- a/avin_gui/Cargo.toml
+++ b/avin_gui/Cargo.toml
@@ -14,6 +14,7 @@ avin_analyse = { workspace = true }
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
 avin_scanner = { workspace = true }
+avin_simulator = { workspace = true }
 avin_strategy = { workspace = true }
 avin_tester = { workspace = true }
 avin_utils = { workspace = true }
