--- a/avin_trader/Cargo.toml
+++ b/avin_trader/Cargo.toml
@@ -13,6 +13,7 @@ readme = "../README.md"
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
 avin_strategy = { workspace = true }
+avin_utils = { workspace = true }
 
 tokio = { workspace = true }
 log = { workspace = true }
