--- a/avin/Cargo.toml
+++ b/avin/Cargo.toml
@@ -13,6 +13,7 @@ readme = "../README.md"
 avin_analyse = { workspace = true }
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
+avin_data = { workspace = true }
 avin_gui = { workspace = true }
 avin_strategy = { workspace = true }
 avin_tester = { workspace = true }
