--- a/avin_data/Cargo.toml
+++ b/avin_data/Cargo.toml
@@ -11,6 +11,7 @@ readme = "../README.md"
 
 [dependencies]
 avin_utils = { workspace = true }
+avin_core = { workspace = true }
 cached = { workspace = true }
 chrono = { workspace = true }
 log = { workspace = true }
@@ -18,3 +19,5 @@ polars = { workspace = true }
 serde = { workspace = true }
 strum = { workspace = true }
 time-unit = { workspace = true }
+reqwest = { workspace = true }
+serde_json = { workspace = true }
