--- a/res/config.toml
+++ b/res/config.toml
@@ -12,6 +12,9 @@
     # Path to moex account
     moexalgo = "trading/connect/moex/account.txt"
 
+    # Path to moex api key
+    moex_api_key = "trading/connect/moex/api_key.txt"
+
 [usr]
     # Your local timeshift from UTC+0
     # set it if you want see time with offset-aware
