--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ prost = "0.12"
 prost-types = "0.12"
 reqwest = "0.12.22"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
 strum = { version = "0.27.1", features = ["derive", "strum_macros"]}
 time-unit = "0.1"
 tokio = { version = "1", features = ["full"] }
