--- a/avin_connect/Cargo.toml
+++ b/avin_connect/Cargo.toml
@@ -10,6 +10,7 @@ homepage = { workspace = true }
 readme = "../README.md"
 
 [dependencies]
+avin_data = { workspace = true }
 avin_core = { workspace = true }
 avin_utils = { workspace = true }
 chrono = { workspace = true }
