--- a/avin_data/Cargo.toml
+++ b/avin_data/Cargo.toml
@@ -11,7 +11,7 @@ readme = "../README.md"
 
 [dependencies]
 avin_utils = { workspace = true }
-avin_core = { workspace = true }
+bitcode = { workspace = true }
 cached = { workspace = true }
 chrono = { workspace = true }
 log = { workspace = true }
