--- a/avin_gui/Cargo.toml
+++ b/avin_gui/Cargo.toml
@@ -13,6 +13,7 @@ readme = "../README.md"
 avin_analyse = { workspace = true }
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
+avin_data = { workspace = true }
 avin_scanner = { workspace = true }
 avin_simulator = { workspace = true }
 avin_strategy = { workspace = true }
