--- a/avin_strategy/Cargo.toml
+++ b/avin_strategy/Cargo.toml
@@ -12,6 +12,7 @@ readme = "../README.md"
 [dependencies]
 avin_analyse = { workspace = true }
 avin_core = { workspace = true }
+avin_data = { workspace = true }
 avin_utils = { workspace = true }
 chrono = { workspace = true }
 log = { workspace = true }
