--- a/avin_terminal/Cargo.toml
+++ b/avin_terminal/Cargo.toml
@@ -13,6 +13,7 @@ readme = "../README.md"
 avin_analyse = { workspace = true }
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
+avin_data = { workspace = true }
 avin_utils = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true }
