--- a/avin_tester/Cargo.toml
+++ b/avin_tester/Cargo.toml
@@ -11,6 +11,7 @@ readme = "../README.md"
 
 [dependencies]
 avin_core = { workspace = true }
+avin_data = { workspace = true }
 avin_strategy = { workspace = true }
 avin_utils = { workspace = true }
 bitcode = { workspace = true }
