upd doc core action

--- a/avin_scanner/Cargo.toml
+++ b/avin_scanner/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "avin_scanner"
-description = { workspace = true }
+description = "Simple back scanner, part of 'avin' library"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
