--- a/avin_core/Cargo.toml
+++ b/avin_core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "avin_core"
-description = "Core of the 'avin' library"
+description = "Core objects of the 'avin' library"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
