--- a/avin_gui/Cargo.toml
+++ b/avin_gui/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "avin_gui"
+description = "GUI utils for 'avin' library"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-description = {workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
 homepage = { workspace = true }
