--- a/avin_strategy/Cargo.toml
+++ b/avin_strategy/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "avin_strategy"
+description = "Template for create strategy, part of 'avin' library"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-description = {workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
 homepage = { workspace = true }
