--- a/avin_terminal/Cargo.toml
+++ b/avin_terminal/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "avin_terminal"
+description = "Simple terminal, part of 'avin' library"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-description = {workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
 homepage = { workspace = true }
