--- a/avin_tester/Cargo.toml
+++ b/avin_tester/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "avin_tester"
+description = "Simple back tester, part of 'avin' library"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-description = {workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
 homepage = { workspace = true }
