--- a/avin/Cargo.toml
+++ b/avin/Cargo.toml
@@ -10,6 +10,7 @@ homepage = { workspace = true }
 readme = "../README.md"
 
 [dependencies]
+avin_adviser = { workspace = true }
 avin_analyse = { workspace = true }
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
@@ -20,6 +21,7 @@ avin_simulator = { workspace = true }
 avin_strategy = { workspace = true }
 avin_tester = { workspace = true }
 avin_trader = { workspace = true }
+avin_terminal = { workspace = true }
 avin_utils = { workspace = true }
 
 # tmp dependencies del it after release ######################################
