--- a/avin_strategy/Cargo.toml
+++ b/avin_strategy/Cargo.toml
@@ -13,7 +13,7 @@ readme = "../README.md"
 avin_analyse = { workspace = true }
 avin_core = { workspace = true }
 avin_data = { workspace = true }
-avin_scanner = { workspace = true }
+avin_filter = { workspace = true }
 avin_utils = { workspace = true }
 chrono = { workspace = true }
 log = { workspace = true }
