--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,7 +30,7 @@ avin_connect = { workspace = true }
 avin_core = { workspace = true }
 avin_data = { workspace = true }
 avin_gui = { workspace = true }
-avin_scanner = { workspace = true }
+avin_filter = { workspace = true }
 avin_simulator = { workspace = true }
 avin_strategy = { workspace = true }
 avin_tester = { workspace = true }
