--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ keywords = [ "algorithmic-trading", "trading", "moex" ]
 categories = ["finance"]
 
 [workspace.dependencies]
-avin =              { version = "0.4.0", path = "avin" }
+avin =              { version = "0.4.0", path = "src-tauri" }
 avin_adviser =      { version = "0.4.0", path = "avin_adviser" }
 avin_analyse =      { version = "0.4.0", path = "avin_analyse" }
 avin_connect =      { version = "0.4.0", path = "avin_connect" }
