--- a/avin_data/Cargo.toml
+++ b/avin_data/Cargo.toml
@@ -13,14 +13,16 @@ readme = "../README.md"
 avin_connect = { workspace = true }
 avin_core = { workspace = true }
 avin_utils = { workspace = true }
+
 bitcode = { workspace = true }
 cached = { workspace = true }
 chrono = { workspace = true }
+clap = { workspace = true }
 log = { workspace = true }
 polars = { workspace = true }
+reqwest = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 strum = { workspace = true }
 time-unit = { workspace = true }
 tokio = { workspace = true }
-reqwest = { workspace = true }
-serde_json = { workspace = true }
